--- a/css/style.css
+++ b/css/style.css
@@ -310,7 +310,8 @@ span {
   align-items: center;
   flex-direction: column;
   min-height: auto;
-  padding-bottom: 10rem;
+  /* padding-bottom: 10rem; */
+  padding-bottom: 5rem;
 }
 
 /* non */
