--- a/css/style.css
+++ b/css/style.css
@@ -48,9 +48,14 @@ body {
 }
 
 .logo {
+  position: relative;
   font-size: 2.5rem;
   color: var(--text-color);
   font-weight: 600;
+}
+
+.navbar {
+  position: relative;
 }
 
 .navbar a {
@@ -67,6 +72,7 @@ body {
 }
 
 #menu-icon {
+  position: relative;
   font-size: 3.6rem;
   color: var(--text-color);
   cursor: pointer;
@@ -94,6 +100,8 @@ section {
 }
 
 .home-content h1 {
+  position: relative;
+  display: inline-block;
   font-size: 5.6rem;
   font-weight: 700;
   line-height: 1.3;
@@ -119,6 +127,11 @@ section {
   background-clip: text;
   -webkit-background-clip: text;
   background-position: -42rem 0;
+  /* animation: homeBgText 6s linear infinite; */
+  /* animation-delay: 2s; */
+}
+
+.home.show-animate .home-content .text-animate h3 {
   animation: homeBgText 6s linear infinite;
   animation-delay: 2s;
 }
@@ -132,11 +145,17 @@ section {
   height: 100%;
   border-right: 2px solid var(--main-color);
   z-index: -1;
+  /* animation: homeCursorText 6s linear infinite; */
+  /* animation-delay: 2s; */
+}
+
+.home.show-animate .home-content .text-animate h3::before {
   animation: homeCursorText 6s linear infinite;
   animation-delay: 2s;
 }
 
 .home-content p {
+  position: relative;
   font-size: 1.6rem;
   margin: 2rem 0 4rem;
 }
@@ -274,6 +293,7 @@ section {
 }
 
 .heading {
+  position: relative;
   font-size: 5rem;
   margin-bottom: 3rem;
   text-align: center;
@@ -311,6 +331,7 @@ span {
   border-bottom: 0.2rem solid var(--second-bg-color);
   border-left: 0.2rem solid var(--main-color);
   border-right: 0.2rem solid var(--main-color);
+  animation: aboutSpinner 8s linear infinite;
 }
 
 .about-content {
@@ -318,10 +339,13 @@ span {
 }
 
 .about-content h3 {
+  position: relative;
+  display: inline-block;
   font-size: 2.6rem;
 }
 
 .about-content p {
+  position: relative;
   font-size: 1.6rem;
   margin: 2rem 0 3rem;
 }
@@ -358,11 +382,14 @@ span {
 } */
 
 .education-column .title {
+  position: relative;
+  display: inline-block;
   font-size: 2.5rem;
   margin: 0 0 1.5rem 2rem;
 }
 
 .education-column .education-box {
+  position: relative;
   border-left: 0.2rem solid var(--main-color);
 }
 
@@ -434,6 +461,12 @@ span {
   background: var(--second-bg-color);
 }
 
+.skills h2 {
+  display: inline-block;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
 .skills .skills-row {
   display: flex;
   flex-wrap: wrap;
@@ -445,8 +478,14 @@ span {
 }
 
 .skills-column .title {
+  position: relative;
+  display: inline-block;
   font-size: 2.5rem;
   margin: 0 0 1.5rem;
+}
+
+.skills-column .skills-box {
+  position: relative;
 }
 
 .skills-box .skills-content {
@@ -546,6 +585,12 @@ span {
   padding-bottom: 15rem;
 }
 
+.contact h2 {
+  display: inline-block;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
 .contact form {
   max-width: 70rem;
   margin: 0 auto;
@@ -625,6 +670,11 @@ span {
   background: var(--second-bg-color);
 }
 
+.footer-text,
+.footer-iconTop {
+  position: relative;
+}
+
 .footer-text p {
   font-size: 1.6rem;
 }
@@ -668,6 +718,54 @@ span {
   color: var(--main-color);
 }
 
+/* ANIMATION RELOAD AND SCROLL */
+.animate {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: var(--bg-color);
+  z-index: 98;
+}
+
+.animate.home-img {
+  width: 50%;
+}
+
+.logo .animate,
+.navbar .animate,
+#menu-icon .animate,
+.home.show-animate .animate {
+  animation: showRight 1s ease forwards;
+  animation-delay: calc(0.3s * var(--i));
+}
+
+.animate.scroll {
+  transition: 1s ease;
+  transition-delay: calc(0.3s / var(--i));
+  animation: none;
+}
+
+section:nth-child(odd) .animate.scroll,
+.footer .animate.scroll {
+  background: var(--second-bg-color);
+}
+
+.education .education-box .animate.scroll {
+  width: 105%;
+}
+
+.about.show-animate .animate.scroll,
+.education.show-animate .animate.scroll,
+.education.show-animate .education-box .animate.scroll,
+.skills.show-animate .animate.scroll,
+.contact.show-animate .animate.scroll,
+.footer.show-animate .animate.scroll {
+  transition-delay: calc(0.3s * var(--i));
+  width: 0;
+}
+
 /* BREAKPOINTS */
 @media (max-width: 1200px) {
   html {
@@ -690,6 +788,12 @@ span {
 
   .footer {
     padding: 2rem 4%;
+  }
+}
+
+@media (max-width: 850px) {
+  .animate.home-img {
+    width: 55%;
   }
 }
 
@@ -822,7 +926,7 @@ span {
   }
 }
 
-@media (max-width: 300px) {
+@media (max-width: 306px) {
   html {
     font-size: 40%;
   }
@@ -865,5 +969,17 @@ span {
   75%,
   81% {
     opacity: 0;
+  }
+}
+
+@keyframes aboutSpinner {
+  100% {
+    transform: translate(-50%, -50%) rotate(360deg);
+  }
+}
+
+@keyframes showRight {
+  100% {
+    width: 0;
   }
 }
