--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
+@import url("https://cdn.jsdelivr.net/npm/toastify-js@1.12.0/src/toastify.css");
 
 * {
   margin: 0;
@@ -625,7 +626,7 @@ span {
 .contact {
   min-height: auto;
   /* padding-bottom: 7rem; */
-  padding-bottom: 15rem;
+  padding-bottom: 14rem;
 }
 
 .contact h2 {
@@ -1078,5 +1079,25 @@ span {
 @keyframes showRight {
   100% {
     width: 0;
+  }
+}
+
+/* toast related style*/
+.toastify {
+  padding: 10px 12px;
+  color: var(--text-color);
+  font-size: 1.8rem;
+  text-align: center;
+}
+
+@media only screen and (max-width: 360px) {
+  .toastify-right,
+  .toastify-left {
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    max-width: fit-content;
+    font-size: 2rem;
   }
 }
